1.0 -Added readme description -Added End-to-End tests -Improved test cases -Configured tests -Optimized code -Clean-up -Splitting a general class into smaller ones